change: ソリューションファイルのパスを更新
* `DebugBuildTest.yml` と `ReleaseBuildTest.yml` の `SOLUTION_FILE_PATH` を `src/GameEngine_DX12.sln` から `src/NimaEngine.sln` に変更しました。これにより、ビルドプロセスが新しいソリューションファイルを参照するようになります。

* バイナリファイルやJSONファイルに関する変更はありません。

--- a/.github/workflows/DebugBuildTest.yml
+++ b/.github/workflows/DebugBuildTest.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - main
 env:
-  SOLUTION_FILE_PATH: src/GameEngine_DX12.sln
+  SOLUTION_FILE_PATH: src/NimaEngine.sln
   CONFIGURATION: Debug
 
 jobs:
